# nightcall

./: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  README.md  TRAINING.md  docker-compose.yml  vcpkg.json
assets/models/: rts_policy.onnx
docker/: Dockerfile  Dockerfile.cuda  entrypoint-train.sh  train.env
engine/: CMakeLists.txt
engine/include/engine/: command.hpp  command_validator.hpp  components.hpp  game_state.hpp  observation.hpp  sim_engine.hpp  types.hpp  unit_def.hpp
engine/src/: command_validator.cpp  game_state.cpp  observation.cpp  sim_engine.cpp
engine/src/systems/: cleanup_system.cpp  cleanup_system.hpp  collision_system.cpp  collision_system.hpp  combat_system.cpp  combat_system.hpp  heal_system.cpp  heal_system.hpp  movement_system.cpp  movement_system.hpp
python/: CMakeLists.txt  requirements.txt  sweep.py
python/bindings/: sim_bindings.cpp
python/training/: env.py  export.py  model.py  render_run.py  train.py
scripts/: refresh_training_stack.py
tests/: CMakeLists.txt
tests/engine/: test_commands.cpp  test_observation.cpp  test_sim_determinism.cpp
tools/: CMakeLists.txt  replay_logger.cpp  visualize.py
